--- a/frontend/src/app/auth/reset-password/reset-password.component.html
+++ b/frontend/src/app/auth/reset-password/reset-password.component.html
@@ -1,1 +1,15 @@
-<p>reset-password works!</p>
+<form (ngSubmit)="resetPassword()">
+  <div>
+    <label for="password">New Password:</label>
+    <input
+      type="password"
+      id="password"
+      name="password"
+      [(ngModel)]="newPassword"
+      required
+    />
+  </div>
+  <button type="submit">Reset Password</button>
+
+  <div *ngIf="errorMessage" class="error">{{ errorMessage }}</div>
+</form>
